LU-687 retry to get the fault page if its mapping dropped

in vvp_io_kernel_fault, the page gotten from filemap_fault is unlocked before
returning to vvp_io_kernel_start, which finds the page->mapping is dropped
after getting the page lock again. in this case, VM_FAULT_RETRY should be
set to avoid VM_FAULT_OOM to return.

Change-Id: Ia2ba40ca4ecd67170e6c2eb81ddc0ee34d9379a8
Signed-off-by: Hongchao Zhang <hongchao.zhang@whamcloud.com>